--- a/translations/ui-plugin-find-erm-usage-data-provider/en.json
+++ b/translations/ui-plugin-find-erm-usage-data-provider/en.json
@@ -1,5 +1,12 @@
 {
   "meta.title": "Usage-data-provider-finder (plugin)",
   "modal.label": "Select esage data provider",
-  "searchButton.title": "Find usage data provider"
+  "searchButton.title": "Find usage data provider",
+  "udp.searchInputLabel": "Search usage data providers",
+  "information.harvestingStatus": "Harvesting status",
+  "information.harvestVia": "Harvest via",
+  "information.aggregator": "Aggregator",
+  "information.aggregators": "Aggregators",
+  "information.providerName": "Provider name",
+  "information.latestStatistics": "Latest statistics"
 }
