--- a/translations/ui-plugin-find-erm-usage-data-provider/es_ES.json
+++ b/translations/ui-plugin-find-erm-usage-data-provider/es_ES.json
@@ -1,7 +1,7 @@
 {
-    "meta.title": "Usage-data-provider-finder (plugin)",
-    "modal.label": "Select esage data provider",
-    "searchButton.title": "Find usage data provider",
+    "meta.title": "Buscador de proveedores de datos de uso (plugin)",
+    "modal.label": "Seleccionar proveedor de datos de uso",
+    "searchButton.title": "Buscar proveedor de datos de uso",
     "udp.searchInputLabel": "Buscar proveedores de datos de uso",
     "information.harvestingStatus": "Estado de cosecha",
     "information.harvestVia": "Cosecha vía",
