--- a/translations/ui-plugin-find-erm-usage-data-provider/en.json
+++ b/translations/ui-plugin-find-erm-usage-data-provider/en.json
@@ -1,6 +1,6 @@
 {
   "meta.title": "Usage-data-provider-finder (plugin)",
-  "modal.label": "Select esage data provider",
+  "modal.label": "Select usage data provider",
   "searchButton.title": "Find usage data provider",
   "udp.searchInputLabel": "Search usage data providers",
   "information.harvestingStatus": "Harvesting status",
